@@ -1449,6 +1449,10 @@ Tue May 27 13:29:28 CEST 2003
 Tue May 27 16:33:36 CEST 2003
 
 	- Accept stdin/stdout as input/output file.
+	
+Thu May 29 13:58:25 CEST 2003
+
+	- ecpg should now be able to parse forward struct definition.
 	- Set ecpg version to 2.12.0.
 	- Set ecpg library to 3.4.2.
 	- Set pgtypes library to 1.0.0
